# solana-voting-program-development

./: README.md  course.yml  extensions.yml
extensions/advanced-features/01-sc6-time-limits/: instruction.md  stage.yml
extensions/advanced-features/02-tn7-vote-weights/: instruction.md  stage.yml
stages/01-ry1-environment-setup/: instruction.md  solution.md  stage.yml
stages/02-ac2- account-structure/: instruction.md  stage.yml
stages/02-ac2-account-structure/: instruction.md  solution.md  stage.yml
stages/02-ol2-project-structure/: instruction.md  stage.yml
stages/03-ct3-proposal-context/: instruction.md  stage.yml
stages/03-oe3-create-proposal/: instruction.md  stage.yml
stages/04-av4-implement-voting/: instruction.md  stage.yml
stages/04-pd4-pda-initialization/: instruction.md  stage.yml
stages/05-dh5-data-handling/: instruction.md  stage.yml
stages/05-lp5-testing-deployment/: stage.yml
stages/06-vc6-vote-context/: instruction.md  stage.yml
stages/07-er7-error-codes/: instruction.md  stage.yml
stages/08-vl8-voting-logic/: instruction.md  stage.yml
stages/09-lp9-test-deploy/: instruction.md  stage.yml
template/: .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  package.json  stackclass.yml  tsconfig.json  your_program.sh
template/.stackclass/: compile.sh  run.sh
template/migrations/: deploy.ts
template/programs/voting-program/: Cargo.toml
template/programs/voting-program/src/: lib.rs
template/tests/: voting-program.ts
