[workspace]
members = [
    "programs/*"
]
resolver = "2"

[package]
name = "stackclass-solana-voting-program"
version = "0.1.0"
authors = ["StackClass <hello@stackclass.dev>"]
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
